[gd_scene load_steps=3 format=3 uid="uid://brk8ciananh4q"]

[ext_resource type="PackedScene" uid="uid://f0y5yutdgyx2" path="res://Kobold Cave/Entity/Player/states/player_state_base.tscn" id="1_564h3"]
[ext_resource type="Script" uid="uid://ci6j81es2s7ii" path="res://Kobold Cave/Entity/Player/states/AirBorne/player_air.gd" id="2_gme20"]

[node name="PlayerAir" instance=ExtResource("1_564h3")]
script = ExtResource("2_gme20")
use_slow = true
default_enter_args = Dictionary[StringName, Variant]({
&"Grab Time": 0.2
})

[node name="jumpTimer" type="Timer" parent="." index="0"]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.25
one_shot = true

[node name="StuckTimer" type="Timer" parent="." index="1"]
unique_name_in_owner = true
editor_description = "Incase you end up falling forever, this timer will force you to respawn"
process_callback = 0
wait_time = 30.0
one_shot = true

[node name="GrabTimer" type="Timer" parent="." index="2"]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[connection signal="timeout" from="StuckTimer" to="." method="_on_stuck_timer_timeout"]
[connection signal="timeout" from="GrabTimer" to="." method="_on_grab_timer_timeout"]
